<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewPostActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/post_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/post_image_description"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/post_title_text"
            android:textSize="50sp"
            app:layout_constraintTop_toBottomOf="@+id/post_image" />

        <TextView
            android:id="@+id/post_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/post_body_text"
            android:textSize="20sp"
            android:scrollbars="vertical"
            android:isScrollContainer="true" />

    </LinearLayout>

</ScrollView>